# v0-cerebro-amigo-v3

./: .coderabbit.yaml  .env  .env.example  .gitignore  CLAUDE.md  README.md  README.pt-br.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: docker-bake.hcl
.github/workflows/: ci.yml  deploy.yml  restore-drill.yml
_v2-ref/apps/agents-py/: .env.example  Dockerfile  pyproject.toml
_v2-ref/apps/agents-py/app/: scheduler.py
_v2-ref/apps/agents-py/app/agents/: padroes.py  resumidor.py
_v2-ref/apps/agents-py/app/core/: config.py  llm.py  observability.py
_v2-ref/apps/agents-py/app/jobs/: __init__.py  gerador_checkins_medicacao.py  gerador_questionarios.py
_v2-ref/apps/agents-py/tests/: conftest.py  test_resumo_format.py
_v2-ref/apps/orchestrator-py/: .env.example  Dockerfile  pyproject.toml
_v2-ref/apps/orchestrator-py/app/: config.py  main.py  observability.py
_v2-ref/apps/orchestrator-py/app/conversation/: __init__.py  crisis_copy.py  llm.py  schemas.py  state.py  streaming.py
_v2-ref/apps/orchestrator-py/app/conversation/nodes/: __init__.py  crisis.py  finalize.py  medication.py  response.py  symptoms.py
_v2-ref/apps/orchestrator-py/tests/: conftest.py  test_graph_routing.py
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
app/login/: page.tsx
apps/agents-py/: .env.example  README.md  pyproject.toml
apps/api-gateway/: ApiGateway.csproj  Program.cs  appsettings.json
apps/api-gateway-scala/: Dockerfile  README.md  build.sbt
apps/api-gateway-tests/: AdminScopeTests.cs  ApiGateway.Tests.csproj  AsaasWebhookTests.cs  AssinaturaGateIntegrationTests.cs  AssinaturaGateTests.cs  ConsultaBriefingsIsolationTests.cs  EdgeOriginAuthTests.cs  FeatureGateIntegrationTests.cs  FilaAtencaoTests.cs  LoginRateLimiterTests.cs  MagicLinkRecuperacaoTests.cs  MedicoDocumentosIsolationTests.cs  NewsletterIntegrationTests.cs  PlanCatalogTests.cs  PromptValidationTests.cs  RdsCaTests.cs  ReadOnlyTrialFilterIntegrationTests.cs  RlsIteracao2Tests.cs  RlsTests.cs  SignupCpfTests.cs  TeleconsultaLinkExpiryTests.cs  TeleconsultaUnitTests.cs  TenantIsolationFixture.cs  TenantIsolationTests.cs  TokenVersionRevocationTests.cs  TrialCapPacientesTests.cs  WriteAccessCoverageTests.cs
apps/checkup/: .env.example  .gitignore  CLAUDE.md  Dockerfile  KICKOFF-PROMPT.md  MONOREPO-SNIPPET.md  README.md  next.config.ts  package.json  tsconfig.json  vitest.config.ts
apps/notifier-py/: .gitignore  README.md  pyproject.toml
apps/notifier-py/app/: checkin_copy.py  consulta_copy.py  consulta_lembretes.py  dispatcher.py  email_fallback.py  main.py  medico_notify.py  push_client.py  scheduler.py
apps/notifier-py/app/core/: config.py  db.py  observability.py  rds_ca.py
apps/notifier-py/tests/: test_checkin_copy.py  test_consulta_copy.py  test_crise_escalonamento.py  test_crypto.py  test_pii_processor.py  test_pii_t03.py
apps/orchestrator-py/: README.md  pyproject.toml
apps/web/: .env.example  .gitignore  Dockerfile  instrumentation-client.ts  next.config.mjs  package.json  proxy.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.tsbuildinfo
components/: header.tsx  logo.tsx  sidebar.tsx
docs/: CONTEXT.md  Cerebro_Amigo_5_Ideias_Oscar.md  DEBT.md  DOCUMENTACAO-SISTEMA.md  aws-bedrock-quota-support-case.md  build-guia.mjs  guia-psiquiatra-cerebro-amigo.html  html-to-pdf.mjs  infra-baseline.md  setup-guide.md
(+1074 files in other folders)
