[project]
name = "cerebro-amigo-agents"
version = "0.1.0"
description = "Cérebro Amigo · agentes analíticos (FastAPI + APScheduler + LangSmith)"
requires-python = ">=3.12"

dependencies = [
    # Web (endpoints manuais de disparo + health checks)
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.32.0",

    # Scheduling
    "apscheduler>=3.10.0",

    # LangChain / LangSmith
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.4.0",

    # DB
    "asyncpg>=0.30.0",

    # Análise estatística (usado pelo agente padroes)
    "scipy>=1.14.0",
    "numpy>=2.0.0",

    # Config / validação
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Observabilidade
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
