[project]
name = "cerebro-amigo-orchestrator"
version = "0.1.0"
description = "Cérebro Amigo · orquestrador conversacional (FastAPI + LangGraph)"
requires-python = ">=3.12"

dependencies = [
    # Web
    "fastapi>=0.118.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",

    # LangChain / LangGraph / LangSmith
    "langgraph>=0.6.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "langsmith>=0.4.0",

    # DB
    "asyncpg>=0.30.0",
    "psycopg[binary,pool]>=3.2.0",  # exigido pelo checkpointer Postgres do LangGraph

    # Config / validação
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Observabilidade
    "structlog>=24.4.0",

    # Push (mantido aqui para a fase em que migrarmos VAPID; opcional)
    "pywebpush>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "respx>=0.21.0",  # mock httpx
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
